--- a/css/styles.css
+++ b/css/styles.css
@@ -482,7 +482,8 @@ button {
 .fotter-media-container {
 	margin-left: 120px;
 }
-.fotter-media-title {
+.fotter-media-title,
+.subscribe-title {
 	color: #ffffff;
 	font-family: sans-serif;
 	font-weight: 500;
@@ -512,6 +513,66 @@ button {
 	background-color: #31d0aa;
 }
 
+/* subscribe sigment */
+
+.footer-subscribe-container {
+	margin-left: 80px;
+}
+
+.subscribe-title {
+	margin-bottom: 16px;
+}
+
+.mail-input-subscribe {
+	color: var(--white);
+	width: 264px;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+	padding: 8px 16px;
+	background-color: transparent;
+	outline: none;
+	transition: border-color var(--transition);
+}
+
+.mail-input-subscribe::placeholder {
+	font-size: 12px;
+	line-height: 2;
+	letter-spacing: 0.04em;
+	color: rgba(255, 255, 255, 0.6);
+}
+
+.mail-input-subscribe:focus {
+	border: 1px solid #4d5ae5;
+}
+
+.footer-subscribe-form {
+	display: flex;
+}
+
+.footer-subscribe-btn {
+	display: flex;
+	align-items: center;
+	margin-left: 24px;
+	font-weight: 500;
+	font-size: 16px;
+	letter-spacing: 0.04em;
+	color: var(--white);
+	padding: 8px 24px;
+	background-color: var(--primary-brand);
+	border-radius: 4px;
+	border: 1px;
+	transition: background-color var(--transition);
+}
+
+.footer-subscribe-btn:hover,
+.footer-subscribe-btn:focus {
+	background-color: #404bbf;
+}
+
+.subscribe-icon {
+	margin-left: 16px;
+}
 /*------------------MODAL WINDOW------------------*/
 
 .backdrop {
@@ -531,7 +592,6 @@ button {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 408px;
-	height: 576px;
 	background-color: #fcfcfc;
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 4px;
@@ -637,6 +697,7 @@ button {
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
 	transition: border-color var(--transition);
+	margin-bottom: 16px;
 }
 
 .modal-textarea-form:focus {
@@ -651,10 +712,6 @@ button {
 	color: rgba(117, 117, 117, 0.5);
 }
 
-.check-form{
-	
-}
-
 .checkbox-form::before {
 	display: block;
 	width: 16px;
@@ -664,13 +721,11 @@ button {
 	content: "";
 	cursor: pointer;
 	margin-right: 8px;
-	
 }
 
 .check-form:checked + .checkbox-form::before {
 	background-color: var(--primary-brand);
 	background-image: url(../image/check-icon.svg);
-	/* background-size: 10px 8px; */
 	background-position: center;
 	background-repeat: no-repeat;
 	border: 1.25px solid #404bbf;
@@ -688,6 +743,30 @@ button {
 	line-height: 1.33;
 	letter-spacing: 0.04em;
 	color: #757575;
-	margin-bottom: 24px;
+}
 
+.privacy-policy-link {
+	color: var(--primary-brand);
+}
+
+.modal-form-submit {
+	font-weight: 500;
+	font-size: 16px;
+	letter-spacing: 0.04em;
+	color: var(--white);
+	background-color: var(--primary-brand);
+	padding: 16px 32px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	border: 1px;
+	min-width: 169px;
+	transition: background-color var(--transition);
+	align-self: center;
+	/* margin: 0 auto; */
+	margin-top: 24px;
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+	background-color: #404bbf;
 }
